# A-Maze-ing-

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  parser.py  types.py  validator.py
core/: cell.py  constants.py  maze.py  solver.py
generators/: __init__.py  maze_generator.py
mazegen/: __init__.py  constants.py  maze.py  maze_generator.py  solver.py
mazegen/core/: __init__.py  cell.py  maze.py  solver.py
render/: __init__.py  ascii.py  graphic.py  render.py
